--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "4    automatic   sedan       black     NaN  2019-04-02           28  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,12 +268,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data Cleaning\n",
+    "We have missing values for model years, cylinders, odometer, is_4wd and paint_color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2011.0\n",
+      "6.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "113000.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Finding median of model_year to fill in missing values with\n",
+    "median_model_year = df['model_year'].median()\n",
+    "print(median_model_year)\n",
+    "\n",
+    "#assigning median model year value to missing values in model_year\n",
+    "df['model_year'] = df['model_year'].fillna(median_model_year)\n",
+    "\n",
+    "#finding median cylinder value\n",
+    "median_cylinders = df['cylinders'].median()\n",
+    "print(median_cylinders)\n",
+    "\n",
+    "#assigning median cylinder value to missing values in cylinders\n",
+    "df['cylinders'] = df['cylinders'].fillna(median_cylinders)\n",
+    "\n",
+    "#finding median odometer reading\n",
+    "median_odometer = df['odometer'].median()\n",
+    "display(median_odometer)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#missing = ['model_year', 'cylinders', 'odometer', 'is_4wd']\n",
+    "#for x in missing:\n",
+    "#    df[x] = df[x].fillna(0).astype(int)\n",
+    "\n",
+    "#paint color will be 'unknown' and not converted to integer\n",
+    "df['paint_color'] = df['paint_color'].fillna('unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "price               0\n",
+       "model_year          0\n",
+       "model               0\n",
+       "condition           0\n",
+       "cylinders           0\n",
+       "fuel                0\n",
+       "odometer         7892\n",
+       "transmission        0\n",
+       "type                0\n",
+       "paint_color         0\n",
+       "is_4wd          25953\n",
+       "date_posted         0\n",
+       "days_listed         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Histogram distribution of Car Prices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
